--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "config": "^3.3.2",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
