--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1"
