--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,21 +1,15 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "react-app"],
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "plugins": ["react"],
+  "extends": [
+    "react-app",
+    "airbnb",
+    "plugin:jsx-a11y/recommended",
+    "prettier",
+    "prettier/react"
+  ],
+  "parser": "babel-eslint",
+  "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "no-console": 1,
-    "no-alert": 1,
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn"
+    "no-alert": 1
   }
 }
