--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -9,6 +9,7 @@
   "parser": "babel-eslint",
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-console": 1,
     "no-alert": 1
   }
