--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,8 @@
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "no-else-return": 0,
+    "no-var": 1,
     "no-console": 1,
     "no-alert": 1
   }
