--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,11 @@
     "eject": "react-scripts eject",
     "lint": "eslint ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -47,6 +52,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
     "prettier": "^2.1.2"
   }
 }
