--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,6 +10,7 @@
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "no-else-return": 0,
     "no-var": 1,
     "no-console": 1,
