--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "antd": "^4.7.3",
     "axios": "^0.21.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "react": "^16.14.0",
@@ -44,6 +43,7 @@
   "proxy": "http://localhost:5000/",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.3",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.15.0",
@@ -53,6 +53,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "reactstrap": "^8.7.0"
   }
 }
