--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
-    "reactstrap": "^8.7.0"
+    "reactstrap": "^8.7.0",
+    "styled-components": "^5.2.1"
   }
 }
