--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
+    "react-select": "^3.1.0",
     "reactstrap": "^8.7.0",
     "styled-components": "^5.2.1"
   }
