--- a/client/package.json
+++ b/client/package.json
@@ -55,8 +55,10 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
+    "react-redux": "^7.2.2",
     "react-select": "^3.1.0",
     "reactstrap": "^8.7.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   }
 }
