--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -10,8 +10,10 @@
   "plugins": ["jsx-a11y", "prettier"],
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-else-return": 0,
+    "react/require-default-props": 0,
+    "react/forbid-prop-types": 0,
     "no-var": 1,
     "no-console": 1,
     "no-alert": 1
