--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "prettier": "^2.1.2",
     "react-redux": "^7.2.2",
     "react-select": "^3.1.0",
+    "react-uuid": "^1.0.2",
     "reactstrap": "^8.7.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1"
