--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "concurrently": "^4.0.1"
+    "concurrently": "^4.0.1",
+    "eslint": "^7.12.1"
   }
 }
