--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.0",
     "prettier": "^2.1.2",
+    "react-hook-form": "^6.10.1",
     "react-redux": "^7.2.2",
     "react-select": "^3.1.0",
     "react-uuid": "^1.0.2",
