--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,6 +12,7 @@
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-else-return": 0,
+    "import/prefer-default-export": "off",
     "react/require-default-props": 0,
     "react/forbid-prop-types": 0,
     "no-var": 1,
