--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -13,6 +13,9 @@
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "no-else-return": 0,
     "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/destructuring-assignment": "off",
+    // "assignmenteslintreact/destructuring-assignment": "off",
     "react/require-default-props": 0,
     "react/forbid-prop-types": 0,
     "no-var": 1,
