--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^2.9.4",
     "emoji-dictionary": "^1.0.11",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
