--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,13 @@
     "chart.js": "^2.9.4",
     "emoji-dictionary": "^1.0.11",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "i18next": "^19.8.3",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.14.0",
+    "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactstrap-date-picker": "^0.0.11"
