--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-i18next": "^11.7.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "reactstrap-date-picker": "^0.0.11"
+    "reactstrap-date-picker": "^0.0.11",
+    "use-places-autocomplete": "^1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
