feat: add dotenv

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "chart.js": "^2.9.4",
+    "dotenv": "^8.2.0",
     "emoji-dictionary": "^1.0.11",
     "eslint-plugin-react-hooks": "^4.2.0",
     "i18next": "^19.8.3",
