--- a/client/.env
+++ b/client/.env
@@ -5,7 +5,7 @@
 # my key
 REACT_APP_MAP_API_KEY='AIzaSyBeEcwe9MrWGjT8epK_iCCyhAiql-Qvczw'
 
-
+REACT_APP_PLACES_API_KEY='AIzaSyCuMJ3dhADqNoE4tGuWTI3_NlwBihj5BtE'
 
 
 # HELP
