--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "yarn start",
+    "start": "node index.js",
     "lint": "eslint ."
   },
   "husky": {
