--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
