--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "connect-ensure-login": "^0.1.1",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "lodash": "^4.17.20",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.9",
     "mongoose-findorcreate": "^3.0.0",
