--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "config": "^3.3.2",
     "connect-ensure-login": "^0.1.1",
