feat: add new ruls with quotes to project eslint file

--- a/client/.env
+++ b/client/.env
@@ -3,9 +3,9 @@
 # console.log("map", process.env.REACT_APP_MAP_API_KEY);
 
 # my key
-REACT_APP_MAP_API_KEY='AIzaSyBeEcwe9MrWGjT8epK_iCCyhAiql-Qvczw'
+REACT_APP_MAP_API_KEY="AIzaSyBeEcwe9MrWGjT8epK_iCCyhAiql-Qvczw"
 
-REACT_APP_PLACES_API_KEY='AIzaSyCuMJ3dhADqNoE4tGuWTI3_NlwBihj5BtE'
+REACT_APP_PLACES_API_KEY="AIzaSyCuMJ3dhADqNoE4tGuWTI3_NlwBihj5BtE"
 
 
 # HELP
