--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -20,6 +20,7 @@
     "react/forbid-prop-types": 0,
     "no-var": 1,
     "no-console": 1,
-    "no-alert": 1
+    "no-alert": 1,
+    "quotes": ["error", "double"]
   }
 }
