--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,7 +8,11 @@
     "ecmaVersion": 12
   },
   "rules": {
+    "no-var": 1,
     "no-console": 1,
-    "no-alert": 1
+    "no-alert": 1,
+    "semi": [2, "always"],
+    "quotes": ["error", "double"],
+    "no-else-return": 0
   }
 }
