--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -22,6 +22,9 @@
     "no-console": 1,
     "no-alert": 1,
     "semi": [2, "always"],
-    "quotes": ["error", "double"]
+    "quotes": ["error", "double"],
+    "indent": ["error", 2, {"SwitchCase": 1}],
+    "linebreak-style": ["error",  "windows"],
+    "no-multiple-empty-lines": "error"
   }
 }
