--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -13,6 +13,8 @@
     "no-alert": 1,
     "semi": [2, "always"],
     "quotes": ["error", "double"],
-    "no-else-return": 0
+    "no-else-return": 0,
+    "indent": ["error", 2, {"SwitchCase": 1}],
+    "no-multiple-empty-lines": "error"
   }
 }
