--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -24,6 +24,7 @@
     "semi": [2, "always"],
     "quotes": ["error", "double"],
     "indent": ["error", 2, {"SwitchCase": 1}],
-    "no-multiple-empty-lines": "error"
+    "no-multiple-empty-lines": "error",
+    "eol-last": ["error", "always"]
   }
 }
