--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -15,6 +15,7 @@
     "quotes": ["error", "double"],
     "no-else-return": 0,
     "indent": ["error", 2, {"SwitchCase": 1}],
-    "no-multiple-empty-lines": "error"
+    "no-multiple-empty-lines": "error",
+    "eol-last": ["error", "always"]
   }
 }
